install by REST services restart option dependency upgrade log4j removal